add maven e install from src